Experiment with ageworkflows

--- a/internal/prebuiltconfigs/tools/dataplex.yaml
+++ b/internal/prebuiltconfigs/tools/dataplex.yaml
@@ -9,7 +9,13 @@ tools:
     source: dataplex-source
     description: |
       Use this tool to search for entries in Dataplex Catalog that represent data assets (e.g. tables, views, models) based on the provided search query.
+  dataplex_lookup_entry:
+    kind: dataplex-lookup-entry
+    source: dataplex-source
+    description: |
+      Use this tool to get details about a specific entry in Dataplex Catalog.
 
 toolsets:
   dataplex-tools:
     - dataplex_search_entries
+    - dataplex_lookup_entry
